--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D52039%3E/">Rana (52039)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2Dnifath222%3E/">Nifath (nifath222)</a><br>
   <br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53002%3E/">Saidul (53002)</a><br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53007%3E/">Saidul (53007)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53008%3E/">Saidul (53008)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53005%3E/">Mamun (53005)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D52037%3E/">Mridul (52037)</a><br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D52042%3E/">Hasib (52042)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53009%3E/">Hasib (53009)</a><br>
   <br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53006%3E/">Rubel (53006)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53006%3E/">Sohel Ahmed (53006)</a><br>
 </div>
 </body>
 </html>
