--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53016%3E/">Tonmoy (53016)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53015%3E/">Murad (53015)</a><br>
+  <br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53020%3E/">Manik (53020)</a><br>
 </div>
 </body>
 </html>
