--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <div class="hello-container">
+  <a href="http://43.231.23.122/graphs/iface/Internet/">Internet</a><br>
+  <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53013%3E/">Bijoy (53013)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53001%3E/">Swapon (53001)</a><br>
