--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53015%3E/">Murad (53015)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53020%3E/">Manik (53020)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53023%3E/">Ridoy (53023)</a><br>
 </div>
 </body>
 </html>
