--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53009%3E/">Saidul (53009)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53014%3E/">Iqbal (53014)</a><br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53017%3E/">Masud (53017)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53025%3E/">Imran2 (53025)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53022%3E/">Riyad (53022)</a><br>
   <br>
@@ -34,6 +34,7 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53012%3E/">Khokon (53012)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53016%3E/">Tonmoy (53016)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53021%3E/">Ripon (53021)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53026%3E/">Ripon2 (53026)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53015%3E/">Murad (53015)</a><br>
   <br>
