--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53014%3E/">Iqbal (53014)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53025%3E/">Imran2 (53025)</a><br>
   <br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53022%3E/">Riyad (53022)</a><br>
-  <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53006%3E/">Sohel Ahmed (53006)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53018%3E/">Jahangir (53018)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53027%3E/">Tushar (53027)</a><br>
@@ -37,8 +35,8 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53021%3E/">Ripon (53021)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53026%3E/">Ripon2 (53026)</a><br>
   <br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53029%3E/">New1 (53029)</a><br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53030%3E/">New2 (53030)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53029%3E/">Khoma (53029)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53030%3E/">Nasir (53030)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53015%3E/">Murad (53015)</a><br>
   <br>
