--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53029%3E/">Koma (53029)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53030%3E/">Nasir (53030)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53032%3E/">Shamim (53032)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53031%3E/">Kashem (53031)</a><br>
   <br>
