--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53003%3E/">Zubayer (53003)</a><br>
   <br>
-  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D52034%3E/">Imran (52034)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D52034%3E/">Imran (53033)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D52039%3E/">Rana (52039)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2Dnifath222%3E/">Nifath (nifath222)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53024%3E/">Tamim (53024)</a><br>
@@ -22,6 +22,8 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53005%3E/">Mamun (53005)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53019%3E/">Mridul (53019)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53009%3E/">Saidul (53009)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53019%3E/">Jubayer2 (53034)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53009%3E/">Rony (53035)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53014%3E/">Iqbal (53014)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53025%3E/">Imran2 (53025)</a><br>
