--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53016%3E/">Tonmoy (53016)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53021%3E/">Ripon (53021)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53026%3E/">Jony (53026)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53037%3E/">Farhan (53037)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53029%3E/">Koma (53029)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53030%3E/">Nasir (53030)</a><br>
@@ -44,6 +45,7 @@
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53031%3E/">Kashem (53031)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53028%3E/">Ashik (53028)</a><br>
+  <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53036%3E/">Kamal (53036)</a><br>
   <br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53015%3E/">Murad (53015)</a><br>
   <a href="http://43.231.23.122/graphs/iface/%3Cpppoe%2D53020%3E/">Manik (53020)</a><br>
