--- a/index.html
+++ b/index.html
@@ -16,21 +16,20 @@
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53033%3E/">Imran (53033)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D52039%3E/">Rana (52039)</a><br>
-  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2Dnifath222%3E/">Nifath (nifath222)</a><br>
+  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2Dnifath222%3E/">Nifath (53040)</a><br>
+  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2Dnifath222%3E/">Alomgir (53038)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53024%3E/">Tamim (53024)</a><br>
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53008%3E/">Hasib (53008)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53005%3E/">Mamun (53005)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53019%3E/">Mridul (53019)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53009%3E/">Saidul (53009)</a><br>
-  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53034%3E/">Jubayer2 (53034)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53035%3E/">Rony (53035)</a><br>
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53014%3E/">Iqbal (53014)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53025%3E/">Imran2 (53025)</a><br>
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53006%3E/">Sohel Ahmed (53006)</a><br>
-  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53018%3E/">Jahangir (53018)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53027%3E/">Tushar (53027)</a><br>
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53012%3E/">Rabbi (53012)</a><br>
@@ -38,11 +37,11 @@
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53021%3E/">Ripon (53021)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53026%3E/">Jony (53026)</a><br>
   <br>
-  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53029%3E/">Koma (53029)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53030%3E/">Nasir (53030)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53032%3E/">Shamim (53032)</a><br>
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53031%3E/">Kashem (53031)</a><br>
+  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53034%3E/">Tarek (53034)</a><br>
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53028%3E/">Ashik (53028)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53036%3E/">Kamal (53036)</a><br>
