--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53033%3E/">Imran (53033)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D52039%3E/">Rana (52039)</a><br>
-  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2Dnifath222%3E/">Nifath (53040)</a><br>
-  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2Dnifath222%3E/">Alomgir (53038)</a><br>
+  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53040%3E/">Nifath (53040)</a><br>
+  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53038%3E/">Alomgir (53038)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53024%3E/">Tamim (53024)</a><br>
   <br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53008%3E/">Hasib (53008)</a><br>
@@ -32,7 +32,7 @@
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53006%3E/">Sohel Ahmed (53006)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53027%3E/">Tushar (53027)</a><br>
   <br>
-  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53012%3E/">Rabbi (53012)</a><br>
+  <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53039%3E/">Rabbi (53039)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53016%3E/">Tonmoy (53016)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53021%3E/">Ripon (53021)</a><br>
   <a href="http://103.126.218.66:81/graphs/iface/%3Cpppoe%2D53026%3E/">Jony (53026)</a><br>
