--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <a href="http://103.126.218.38:81/graphs/iface/BDIX-VLAN-1017/">BDIX</a><br>
   <br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53013%3E/">Bijoy (53013)</a><br>
+  <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53042%3E/">Junaid (53042)</a><br>
   <br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53001%3E/">Swapon (53001)</a><br>
   <br>
@@ -19,6 +20,7 @@
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53040%3E/">Nifath (53040)</a><br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53038%3E/">Alomgir (53038)</a><br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53024%3E/">Tamim (53024)</a><br>
+  <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53041%3E/">Sumon (53041)</a><br>
   <br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53008%3E/">Hasib (53008)</a><br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53005%3E/">Mamun (53005)</a><br>
@@ -48,7 +50,6 @@
   <br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53015%3E/">Murad (53015)</a><br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53023%3E/">Akash (53023)</a><br>
-  <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53037%3E/">Monir (53037)</a><br>
 </div>
 </body>
 </html>
