--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53013%3E/">Bijoy (53013)</a><br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53042%3E/">Junaid (53042)</a><br>
+  <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53043%3E/">Arafat (53043)</a><br>
   <br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53001%3E/">Swapon (53001)</a><br>
+  <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53044%3E/">Zubayer (53044)</a><br>
   <br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D53033%3E/">Imran (53033)</a><br>
   <a href="http://103.126.218.38:81/graphs/iface/%3Cpppoe%2D52039%3E/">Rana (52039)</a><br>
