--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53001%3E/">Swapon (53001)</a><br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53044%3E/">Zubayer (53044)</a><br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53052%3E/">Dudmia (53052)</a><br>
+  <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53051%3E/">Alomgir (53051)</a><br>
   <br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53033%3E/">Imran (53033)</a><br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D52039%3E/">Rana (52039)</a><br>
@@ -31,6 +32,7 @@
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53024%3E/">Tamim (53024)</a><br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53041%3E/">Sumon (53041)</a><br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53050%3E/">Aunto (53050)</a><br>
+  <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53056%3E/">Zia (53056)</a><br>
   <br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53008%3E/">Hasib (53008)</a><br>
   <a href="http://103.126.218.37:81/graphs/iface/%3Cpppoe%2D53005%3E/">Mamun (53005)</a><br>
